tests/baselines/reference/asyncFunctionNoReturnType.errors.txt
error TS2318: Cannot find global type 'Promise'.
tests/cases/compiler/asyncFunctionNoReturnType.ts(1,1): error TS1311: Async functions are only available when targeting ECMAScript 2015 or higher.
tests/cases/compiler/asyncFunctionNoReturnType.ts(1,1): error TS1057: An async function or method must have a valid awaitable return type.
tests/cases/compiler/asyncFunctionNoReturnType.ts(1,1): error TS7030: Not all code paths return a value.
tests/cases/compiler/asyncFunctionNoReturnType.ts(2,9): error TS2304: Cannot find name 'window'.
tests/cases/compiler/asyncFunctionNoReturnType.ts(3,9): error TS7030: Not all code paths return a value.


!!! error TS2318: Cannot find global type 'Promise'.
==== tests/cases/compiler/asyncFunctionNoReturnType.ts (5 errors) ====
    async () => {
    ~~~~~
!!! error TS1311: Async functions are only available when targeting ECMAScript 2015 or higher.
    ~~~~~~~~~~~~~
!!! error TS1057: An async function or method must have a valid awaitable return type.
    ~~~~~~~~~~~~~
!!! error TS7030: Not all code paths return a value.
        if (window)
            ~~~~~~
!!! error TS2304: Cannot find name 'window'.
            return;
            ~~~~~~~
!!! error TS7030: Not all code paths return a value.
    }
    